[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiking_mlir"
version = "0.1.0"
description = "Convert SpikingJelly SNN models to ONNX and MLIR format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "onnx",
    "onnxscript",
    "spikingjelly",
]

[project.optional-dependencies]
mlir = ["torch-mlir"]

[tool.setuptools.packages.find]
where = ["src"]
